--- a/1_FORMULARIOS/4_atividade/index.html
+++ b/1_FORMULARIOS/4_atividade/index.html
@@ -56,6 +56,7 @@
                 </select>
                 </div>
             </div>
+            <button>Enviar</button>
         </fieldset>
         </form>
     </main>
