--- a/1_FORMULARIOS/4_atividade/index.html
+++ b/1_FORMULARIOS/4_atividade/index.html
@@ -13,42 +13,42 @@
                 <legend>Formulário</legend>
             <div>
                 <label for="name">Digite seu Nome:</label>
-                <input type="text" id="name" placeholder="Digite seu Nome...">
+                <input type="text" id="name" placeholder="Digite seu Nome..." required>
             </div>
             <div>
                 <label for="mail">Digite seu e-mail:</label>
-                <input type="email" id="mail" placeholder="Digite seu e-mail...">
+                <input type="email" id="mail" placeholder="Digite seu e-mail..." required>
             </div>
             <div>
                 <label for="date">Data de nascimento:</label>
-                <input type="date" id="date">
+                <input type="date" id="date" required>
             </div>
             <div>
                 <label for="img">Envie seu curriculo:</label>
-                <input type="file" id="img">
+                <input type="file" id="img" required>
             </div>
             <div>
                 <p>Escolha uma data para a entrevista:</p>
 
                 <div>
-                    <input type="radio" id="day1" name="date">
+                    <input type="radio" id="day1" name="date" required>
                     <label for="day1">12 de Setembro</label>
                 </div>
                 <div>
-                    <input type="radio" id="day2" name="date">
+                    <input type="radio" id="day2" name="date" required>
                     <label for="day2">03 de Outubro</label>
                 </div>
                 <div>
-                    <input type="radio" id="day3" name="date">
+                    <input type="radio" id="day3" name="date" required>
                     <label for="day3">11 de Novembro</label>
                 </div>
                 <div>
-                    <input type="radio" id="day4" name="date">
+                    <input type="radio" id="day4" name="date" required>
                     <label for="day4">06 de Dezembro</label>
                 </div>
                 <div>
                     <label for="local">Local de preferência:</label>
-                    <select name="local" id="local">
+                    <select name="local" id="local" required>
                     <option disabled selected>Selecione...</option>
                     <option value="local1">Avenida Paulista</option>
                     <option value="local2">Lapa</option>
