--- a/2_CSS/index.html
+++ b/2_CSS/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS </title>
+
+    <!-- 2 - CSS Internal -->
+    <style>
+        p {
+            color: rebeccapurple;
+        }
+    </style>
 </head>
 <body>
     <!-- 1 - Inline CSS  -->
-    <h1 style="color:purple;">Mudar a cor com o Inline</h1>
+    <h1 style="color:purple">Mudar a cor com o Inline</h1>
+
+    <!-- 2 - Internal CSS -->
+    <p>Estilizando Internal</p>
+    <p>I fall to pieces when i with you</p>
 </body>
 </html>
