--- a/4_ID_CLASS/index.html
+++ b/4_ID_CLASS/index.html
@@ -19,7 +19,7 @@
         é unico, então não é possível repetir o mesmo valor duas vezes,
     </P>
 
-    <h2>CLASS</h2>
+    <h2 class="fundo-verde">CLASS</h2>
 
     <p>O CLASS funciona de maneira oposta ao ID. Diferente do ID em que
      você só pode ter um valor, no Class você pode ter vários valores.
