--- a/4_ID_CLASS/index.html
+++ b/4_ID_CLASS/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ID e CLASS</h1>
+    <h1 id="main-title">ID e CLASS</h1>
 
-    <h2>ID</h2>
+    <h2 class="fundo-verde fonte-grande">ID</h2>
 
     <P>
         O ID funciona como um CPF. Assim com só posso ter um número de CPF,
@@ -19,7 +19,7 @@
         é unico, então não é possível repetir o mesmo valor duas vezes,
     </P>
 
-    <h2 class="fundo-verde">CLASS</h2>
+    <h2 class="fundo-verde fonte-grande">CLASS</h2>
 
     <p>O CLASS funciona de maneira oposta ao ID. Diferente do ID em que
      você só pode ter um valor, no Class você pode ter vários valores.
